# papery-epub-reader

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: pages.yml  release.yml
marketing/xiaohongshu/: index.html  post-copy.md  render.js  slides.js
marketing/xiaohongshu-v114/: index.html  post-copy.md  render.js  slides.js  styles.css
marketing/xiaohongshu/styles/: base.css  components.css  pages-extra.css  pages-final.css  pages.css
scripts/: copy_release.mjs  make_icon.py  render_xhs_v114.mjs
src/: app-dialogs.js  app.js  backup-store.js  backup.js  book-card.js  book-drag.js  book-order.js  book-store.js  box-store.js  db.js  dismiss-popovers.js  heatmap.js  importer.js  library.js  preferences.js  pwa-install.js  pwa-update.js  reader-fonts.js  reader-gestures.js  reader-history.js  reader-immersive.js  reader-margin.js  reader-page.js  reader-paging.js  reader-settings.js  reader.js  reading-timer.js  settings-dialog.js  shelf-controls.js  stats-store.js  storage.js  toc-panel.js  txt-importer.js  window-controls.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/styles/: base.css  dialogs.css  heatmap.css  library.css  reader.css  titlebar.css
tests/: dialogs.spec.js  drag.spec.js  menu.spec.js  mobile.spec.js  pwa.spec.js  reader-sample.txt  touch-drag.spec.js  txt-importer.test.mjs
