[package]
name = "papery-reader"
version = "1.1.3"
description = "轻量本地 EPUB 阅读器"
authors = ["Papery"]
edition = "2021"

[lib]
name = "papery_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
